# lab-brain

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SUBMISSION.md  bootstrap.py  lab-profile.example.yaml  lab-profile.yaml  papers.yaml  pyproject.toml
.github/workflows/: ci.yml
collab/: README.md  harness-playbook.md  roles-and-lanes.md
collab/templates/: LANES.md  START_HERE.md  _handoff-log.md  progress-PERSON.md
demo_vault/: _Index.md
demo_vault/papers/: effects-of-calcitrio-fig4-calcitriol-treat.md  effects-of-calcitrio-fig5a-calcitriol-treat.md  effects-of-calcitrio-fig5b-infected-control.md  effects-of-calcitriol-1-25-dihydroxy-vitamin-d3-fig4-calcitriol-treated-infected.md  effects-of-calcitriol-1-25-dihydroxy-vitamin-d3-fig5a-calcitriol-treated-infected.md  effects-of-calcitriol-1-25-dihydroxy-vitamin-d3-fig5b-infected-control.md
docs/: architecture.md  showcase.html  showcase.template.html
examples/demo-lab-vault/: 2026-07-13_alex-feedback.md  2026-07-13_alex-update.md  FIGURE_FINDINGS.md  LANES.md  README.md  START_HERE.md  _Log.md  _handoff-log.md  progress-alex.md  progress-bobby.md  progress-sam.md
examples/gui2017/: figure_report.html
framework/: README.md  documentation-and-handoffs.md  figures-and-findings.md  harness-playbook.md  knowledge-base-structure.md  mentorship-and-collaboration.md  naming-and-note-format.md  onboarding.md  storyline-and-manuscript.md
src/labbrain/: crop.py  (+12 more)
tests/: test_fetch.py  test_lab_scan.py  test_lab_standup.py  test_review_fixes.py  test_schema.py  test_slice_fixture.py  test_vault.py  test_verify.py
(+64 files in other folders)
