[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lab-brain"
version = "0.1.0"
description = "Offline-first, auditable scientific figure reading"
requires-python = ">=3.12"
dependencies = [
  "Pillow",
  "pypdfium2",
  "PyYAML",
  "requests",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
labbrain = "labbrain.slice:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

